Remove discontinuity at height of 0.  b=220266  r+sr=bzbarsky